objects/Inspection__c.object
<CustomObject>
    <description>Inspections information, all inspections will be related to a case as a parent object.</description>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Inspector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Partner Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comm_As_Builts__c</fullName>
        <label>Comm_As_Builts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_BuildingOccupancy__c</fullName>
        <label>Comm_BuildingOccupancy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_OtherPresent__c</fullName>
        <label>Comm_OtherPresent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comm_ProjectSize__c</fullName>
        <label>Comm_ProjectSize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Project__c</fullName>
        <label>Comm_Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q1_2_Number1__c</fullName>
        <label>Comm Roof Height Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Q1_2_Number2__c</fullName>
        <label>Comm Roof Height Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Q1_3_Field__c</fullName>
        <label>Comm Bldg Wind Exposure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q1_4_Field__c</fullName>
        <label>Comm Bldg Occupancy Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q1_5_Field__c</fullName>
        <label>Comm Roof System Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q1_5a_Field__c</fullName>
        <label>Comm Roof Deck Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q1_5b_Field__c</fullName>
        <label>Comm Roof Edge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q1_5c_Field__c</fullName>
        <label>Comm Roof Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q1_5d_Field__c</fullName>
        <label>Comm Roof Slope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q1_5e_Field__c</fullName>
        <label>Comm Roof Air Barrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q2_04_1__c</fullName>
        <label>Comm Ballast Block Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q2_04_2_1__c</fullName>
        <label>Comm Ballast Block Weight Middle 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q2_04_2_2__c</fullName>
        <label>Comm Ballast Block Weight Middle 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q2_04_3_1__c</fullName>
        <label>Comm Ballast Block Weight Edge 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q2_06a_Field__c</fullName>
        <label>Comm Array Setback Dimensions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q2_06b_Field__c</fullName>
        <label>Comm Array Modules in Edge Zones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q7_01a_Field__c</fullName>
        <label>Comm Inverter Operation from Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Q7_01b_Field__c</fullName>
        <label>Comm Inverter Type and Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Result__c</fullName>
        <label>Compliance Result</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup User of type Inspector</description>
        <label>Inspector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Communication__c</fullName>
        <description>Freeform Text to capture all customer communication</description>
        <label>Customer Communication</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InspectionByTSE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains Inspection report reference of next level inspection.</description>
        <label>Inspection</label>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InspectionNameType__c</fullName>
        <label>InspectionNameType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InspectionSavedBy__c</fullName>
        <label>InspectionSavedBy</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Name__c</fullName>
        <description>Custom Inspection Report Name</description>
        <formula>InspectionNameType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Status__c</fullName>
        <formula>IF((Score__c &gt;= 70) &amp;&amp; BEGINS(Residential_Result__c,&quot;PASS&quot;),&quot;Pass&quot;,&quot;Fail&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Time__c</fullName>
        <label>Inspection Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Type__c</fullName>
        <label>Inspection Type</label>
        <picklist>
            <picklistValues>
                <fullName>onsite support inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quality assurance inspection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <label>Integration ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSaveByTSE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is set to true if TSE reviewer updated and saved Inspection report</description>
        <label>IsSaveByTSE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overvoltage_protection_Comments__c</fullName>
        <label>Overvoltage protection Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Partner for this site</description>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inspections (Partner Contact)</relationshipLabel>
        <relationshipName>Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Res_Ambrient__c</fullName>
        <label>Res_Ambrient_Temperate</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Array_Invertor_Conductor_Size__c</fullName>
        <label>Res Array/Invertor Conductor Size</label>
        <picklist>
            <picklistValues>
                <fullName>2.5mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Res_Consumtion_Monitoring_Comments__c</fullName>
        <label>Res_Consumtion_Monitoring_Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Consumtion_Monitoring_Sys__c</fullName>
        <label>Res_Consumtion_Monitoring_Sys</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Res_External_Bonding_Comments__c</fullName>
        <label>Res_External_Bonding_Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_External_Bonding__c</fullName>
        <label>Res_External_Bonding</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Res_GroundPath_Inverter_MSP_Comment__c</fullName>
        <label>Res_GroundPath_Inverter_MSP_Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_GroundPath_Inverter_MSP__c</fullName>
        <label>Res_GroundPath_Inverter_MSP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Res_Grounding_Cable_Size__c</fullName>
        <label>Res Grounding Cable Size</label>
        <picklist>
            <picklistValues>
                <fullName>2.5mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Res_Invertor_MSP_Size__c</fullName>
        <label>Res Invertor/MSP Size</label>
        <picklist>
            <picklistValues>
                <fullName>2.5mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Res_MSP_to_All_Size__c</fullName>
        <label>Res MSP to All Size</label>
        <picklist>
            <picklistValues>
                <fullName>2.5mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Res_MaxOutputValue__c</fullName>
        <label>Res MaxOutputValue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Res_Mount_Type_Other__c</fullName>
        <label>Res_Mount_Type_Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Mount_Type_text__c</fullName>
        <label>Res Mount Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Mounting_Location_Other__c</fullName>
        <label>Res_Mounting Location_Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Per_Monitoring_Comments__c</fullName>
        <label>Res_Per_Monitoring_Sys_Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Per_Monitoring_Sys__c</fullName>
        <description>Performance Monitoring System field</description>
        <label>Res_Per_Monitoring_Sys</label>
        <picklist>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA Web Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fronius Data Logger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Res_Photo_Array_to_Inverter__c</fullName>
        <label>Res Photo Array to Inverter</label>
        <picklist>
            <picklistValues>
                <fullName>DC Conduit Routing Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Source Circuit Fusing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem areas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Res_Photo_Inverter__c</fullName>
        <label>Res Photo Inverter</label>
        <picklist>
            <picklistValues>
                <fullName>Inverters Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter Interior (AC/DC Terminals)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter Interior (AC/DC Grounding)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC System Grounding Electrode</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Res_Photo_Mounting__c</fullName>
        <label>Res Photo Mounting</label>
        <picklist>
            <picklistValues>
                <fullName>L Brackets, stanchions, flashings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Penetrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Areas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Res_Photo_array_to_mounting__c</fullName>
        <label>Res Photo array to mounting</label>
        <picklist>
            <picklistValues>
                <fullName>Overall Array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array grounding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rooftop Conduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array J-box</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Res_Rack_Type_Comment__c</fullName>
        <label>Res Rack Type Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Rack_Type_Other__c</fullName>
        <label>Res_Rack_Type_Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Rack_Type_text__c</fullName>
        <label>Res Rack Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Roofing_Material_Comment__c</fullName>
        <label>Res Roofing Material Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Roofing_Material_Other__c</fullName>
        <label>Res_Roofing_Material_Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Roofing_Material_text__c</fullName>
        <label>Res Roofing Material</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_SolarBreakerRating__c</fullName>
        <label>Res SolarBreakerRating</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Res_flashing_lights_Comments__c</fullName>
        <label>Res_flashing_lights_Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_flashing_lights__c</fullName>
        <label>Res_flashing_lights</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_AC_DISCONNECT_Exterior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential AC DISCONNECT Exterior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_AC_DISCONNECT_Interior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential AC DISCONNECT Interior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_AC_DISCONNECT_NEC_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential AC DISCONNECT NEC Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_AC_DISCONNECT_Problem_Areas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential AC DISCONNECT Problem Areas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_ADDITIONAL_COMMENTS__c</fullName>
        <label>Res Additional Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Residential_ARRAY_Grounding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential ARRAY Grounding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_ARRAY_INVERTER_DC_Conduit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential ARRAY INVERTER DC Conduit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_ARRAY_INVERTER_PV_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential ARRAY INVERTER PV Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_ARRAY_INVERTER_Problem_Areas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential ARRAY INVERTER Problem Areas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_ARRAY_J_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential ARRAY J-Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_ARRAY_Overall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential ARRAY Overall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_ARRAY_Pathfinder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential ARRAY Pathfinder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_ARRAY_Problem_Areas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential ARRAY Problem Areas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_ARRAY_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential ARRAY Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_ARRAY_Rooftop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential ARRAY Rooftop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Auto_Calculations_1_1__c</fullName>
        <label>Residential_Auto_Calculations_1_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Auto_Calculations_1_2__c</fullName>
        <label>Residential_Auto_Calculations_1_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Auto_Calculations_1_3__c</fullName>
        <label>Residential_Auto_Calculations_1_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Cable_size__c</fullName>
        <label>Cable Size</label>
        <picklist>
            <picklistValues>
                <fullName>2.5mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Commission_Date__c</fullName>
        <label>Residential_Commission_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Residential_Conductors_Installed_Comment__c</fullName>
        <label>Conductors Installed Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Conductors_Installed__c</fullName>
        <label>Conductors Installed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Conductors_Insulated_Comment__c</fullName>
        <label>Conductors Insulated Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Conductors_Insulated__c</fullName>
        <label>Conductors Insulated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_DC_DISCONNECT_Exterior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential DC DISCONNECT Exterior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_DC_DISCONNECT_Interior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential DC DISCONNECT Interior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_DC_DISCONNECT_NEC_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential DC DISCONNECT NEC Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_DC_DISCONNECT_Problem_Areas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential DC DISCONNECT Problem Areas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_DC_disconnects_rated_Comment__c</fullName>
        <label>DC disconnects rated Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_DC_disconnects_rated__c</fullName>
        <label>DC disconnects rated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Degree_of_roof_integration__c</fullName>
        <label>Degree of roof integration</label>
        <picklist>
            <picklistValues>
                <fullName>Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_EU_Q13_Comments__c</fullName>
        <label>Residential EU Q13 Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Grounding_kit_installed_Comm__c</fullName>
        <label>Grounding kit installed Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Grounding_kit_installed__c</fullName>
        <label>Grounding kit installed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_INVERTER_DC_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential INVERTER DC System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_INVERTER_Interior_AC_DC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential INVERTER Interior (AC/DC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_INVERTER_Interior_Grounding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential INVERTER Interior(Grounding)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_INVERTER_Overview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential INVERTER Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_INVERTER_TO_MSP_Conduit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential INVERTER TO MSP Conduit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_INVERTER_TO_MSP_Problem_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential INVERTER TO MSP Problem Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Inverter_located_Comment__c</fullName>
        <label>Inverter located Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Inverter_located__c</fullName>
        <label>Inverter located</label>
        <picklist>
            <picklistValues>
                <fullName>Indoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Inverter_operating_hours__c</fullName>
        <label>Inverter’s operating hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Inverter_to_MSP_wiring__c</fullName>
        <label>Residential Inverter to MSP wiring</label>
        <picklist>
            <picklistValues>
                <fullName>Conduit Routing Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Area (Incorrect Conductor Color)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC-circuit breaker</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Residential_MOUNTING_L_Brackets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential MOUNTING L Brackets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_MOUNTING_Problem_Areas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential MOUNTING Problem Areas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_MOUNTING_Roof_Penetrations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential MOUNTING Roof Penetrations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_MSP_Exterior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential MSP Exterior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_MSP_Interior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential MSP Interior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_MSP_NEC_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential MSP NEC Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Module_design_recomm_Comment__c</fullName>
        <label>Module Design Recomm Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>